<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/create_user_view"
        android:layout_width="181dp"
        android:layout_height="49dp"
        android:autofillHints=""
        android:fontFamily="monospace"
        android:text="@string/create_user_text_view"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/username_cu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/username_cu_hint"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_user_view"
        app:layout_constraintVertical_bias="0.064"
        tools:targetApi="o" />

    <EditText
        android:id="@+id/email_cu_view"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/email_cu_hint"
        android:inputType="textEmailAddress"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.505"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_cu_view"
        app:layout_constraintVertical_bias="0.09"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password_cu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password_cu_hint"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_cu_view"
        app:layout_constraintVertical_bias="0.116"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password_cu_confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password_c_cu_hint"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_cu_view"
        app:layout_constraintVertical_bias="0.155"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/create_user_button"
        android:layout_width="226dp"
        android:layout_height="49dp"
        android:fontFamily="monospace"
        android:text="@string/button_cu_create_user"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_cu_confirm"
        app:layout_constraintVertical_bias="0.87" />

    <EditText
        android:id="@+id/student_id_cu_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/student_id_cu_hint"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/create_user_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_cu_confirm"
        tools:ignore="UnusedAttribute" />

    <ProgressBar
        android:id="@+id/create_user_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone" />

    <ImageButton
        android:id="@+id/back_cu_button"
        android:layout_width="40dp"
        android:layout_height="39dp"
        android:background="@null"
        android:contentDescription="@string/cu_back_arrow_content_desc"
        app:layout_constraintBottom_toTopOf="@+id/username_cu_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.698"
        app:layout_constraintStart_toEndOf="@+id/create_user_view"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.29"
        app:srcCompat="@drawable/ic_arrow_back_black_24dp" />

</android.support.constraint.ConstraintLayout>