<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:id="@+id/textview_login"
        android:layout_width="150dp"
        android:layout_height="41dp"
        android:fontFamily="monospace"
        android:text="@string/text_view_login"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <EditText
        android:id="@+id/username_view"
        android:layout_width="wrap_content"
        android:layout_height="47dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/plain_text_login_hint"
        android:inputType="textPersonName"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textview_login"
        app:layout_constraintVertical_bias="0.135"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password_view"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="monospace"
        android:hint="@string/password_login_hint"
        android:inputType="textPassword"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="24sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/username_view"
        app:layout_constraintVertical_bias="0.163"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/login_button_view"
        android:layout_width="226dp"
        android:layout_height="41dp"
        android:text="@string/button_login_text"
        android:textAppearance="@android:style/TextAppearance.Material.Widget.Button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view"
        app:layout_constraintVertical_bias="0.658" />

    <CheckBox
        android:id="@+id/remember_me_view"
        android:layout_width="168dp"
        android:layout_height="36dp"
        android:layout_marginBottom="10dp"
        android:fontFamily="monospace"
        android:text="@string/checkbox_text"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:textSize="18sp"
        android:typeface="monospace"
        app:layout_constraintBottom_toTopOf="@+id/login_button_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.268"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_view"
        app:layout_constraintVertical_bias="0.421" />

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="89dp"
        android:layout_height="88dp"
        android:visibility="gone"
        app:layout_constraintBottom_toTopOf="@+id/remember_me_view"
        app:layout_constraintEnd_toStartOf="@+id/password_view"
        app:layout_constraintStart_toEndOf="@+id/password_view"
        app:layout_constraintTop_toBottomOf="@+id/password_view"
        app:layout_constraintVertical_bias="1.0"
        tools:visibility="gone" />
</android.support.constraint.ConstraintLayout>